change program name to monospaced

--- a/webui/templates/upload_source.jinja2
+++ b/webui/templates/upload_source.jinja2
@@ -20,7 +20,7 @@
 <div class="content">
 
     <div class="header">
-        <h3>Upload source code for program {{ program_id }}</h3>
+        <h3>Upload source code for program <span class="mono">{{ program_id }}</span></h3>
     </div>
 
     {% if has_leo_source %}
