--- a/webui/templates/base.jinja2
+++ b/webui/templates/base.jinja2
@@ -132,6 +132,18 @@
             width: 50px;
         }
 
+        .number-part {
+            margin: 0 0.1em;
+        }
+
+        .number-dot {
+            margin: 0 -0.05em;
+        }
+
+        .formatted-number {
+            margin: 0 -0.1em;
+        }
+
     </style>
     <script>
 
