--- a/webui/templates/index.jinja2
+++ b/webui/templates/index.jinja2
@@ -53,7 +53,7 @@
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Latest block</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.height }}</div>
+                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.height | format_number | safe }}</div>
                     </div>
                 </div>
                 <div class="cell large-auto ticker-cell">
@@ -71,13 +71,13 @@
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Proof target</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.proof_target | format_number }}</div>
+                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.proof_target | format_number | safe }}</div>
                     </div>
                 </div>
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Coinbase target</div>
-                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.coinbase_target | format_number }}</div>
+                        <div class="cell auto ticker-cell-data">{{ latest_block.header.metadata.coinbase_target | format_number | safe }}</div>
                     </div>
                 </div>
             </div>
@@ -85,7 +85,7 @@
                 <div class="cell large-auto ticker-cell">
                     <div class="grid-y ticker-cell-content">
                         <div class="cell ticker-cell-title">Estimated network speed (15m)</div>
-                        <div class="cell auto ticker-cell-data">{{ network_speed | format_number }}&nbsp;<span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
+                        <div class="cell auto ticker-cell-data">{{ network_speed | format_number | safe }}&nbsp;<span data-tooltip title='commitments per second, also known as "p/s" or "s/s"'>c/s</span></div>
                     </div>
                 </div>
             </div>
@@ -110,13 +110,13 @@
                 <tbody>
                 {% for block in recent_blocks %}
                     <tr>
-                        <td><a href="/block?h={{ block.height }}">{{ block.height }}</a></td>
+                        <td><a href="/block?h={{ block.height }}">{{ block.height | format_number | safe }}</a></td>
                         <td>{{ block.height // 256 }} <span class="note">{{ block.height % 256 }} / 256</span></td>
                         <td>{{ block.timestamp | format_time | safe }}</td>
                         <td>{{ block.transaction_count }}</td>
-                        <td>{{ block.proof_target }}</td>
-                        <td>{{ block.coinbase_target }}</td>
-                        <td>{% if block.coinbase_reward %}{{ ((block.coinbase_reward | int) // 2) | format_aleo_credit }}{% else %}-{% endif %}</td>
+                        <td>{{ block.proof_target | format_number | safe }}</td>
+                        <td>{{ block.coinbase_target | format_number | safe }}</td>
+                        <td>{% if block.coinbase_reward %}{{ ((block.coinbase_reward | int) // 2) | format_aleo_credit | safe }}{% else %}-{% endif %}</td>
                         <td>{% if block.coinbase_reward %}{{ block.partial_solution_count }}{% else %}-{% endif %}</td>
                         <td>-</td>
                     </tr>
